--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "web-vitals": "^2.1.4",
-    "react-bootstrap": "^2.0.4",
+    "axios": "^1.6.8",
     "bootstrap": "^5.1.3",
-    "react-router-dom": "^6.2.1"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.0.4",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.2.1",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
